--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -244,9 +244,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 464, in format\n",
+      "    return self._format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 482, in _format\n",
+      "    return self._fmt.format(**values)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyError: 'server_time'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 1160, in emit\n",
+      "    msg = self.format(record)\n",
+      "          ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 999, in format\n",
+      "    return fmt.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 706, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 675, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 466, in format\n",
+      "    raise ValueError('Formatting field not found in record: %s' % e)\n",
+      "ValueError: Formatting field not found in record: 'server_time'\n",
+      "Call stack:\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1030, in _bootstrap\n",
+      "    self._bootstrap_inner()\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1073, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 761, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1010, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 92, in _worker\n",
+      "    work_item.run()\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 58, in run\n",
+      "    result = self.fn(*self.args, **self.kwargs)\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/asgiref/sync.py\", line 522, in thread_handler\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/tmp/ipykernel_72424/1178278949.py\", line 37, in to_run\n",
+      "    update_entity_from_pid_records()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/tsosi/data/enrichment.py\", line 454, in update_entity_from_pid_records\n",
+      "    logger.info(\"Updating entity from PID records.\")\n",
+      "Message: 'Updating entity from PID records.'\n",
+      "Arguments: ()\n",
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 464, in format\n",
+      "    return self._format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 482, in _format\n",
+      "    return self._fmt.format(**values)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyError: 'server_time'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 1160, in emit\n",
+      "    msg = self.format(record)\n",
+      "          ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 999, in format\n",
+      "    return fmt.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 706, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 675, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 466, in format\n",
+      "    raise ValueError('Formatting field not found in record: %s' % e)\n",
+      "ValueError: Formatting field not found in record: 'server_time'\n",
+      "Call stack:\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1030, in _bootstrap\n",
+      "    self._bootstrap_inner()\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1073, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 761, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1010, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 92, in _worker\n",
+      "    work_item.run()\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 58, in run\n",
+      "    result = self.fn(*self.args, **self.kwargs)\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/asgiref/sync.py\", line 522, in thread_handler\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/tmp/ipykernel_72424/1178278949.py\", line 37, in to_run\n",
+      "    update_entity_from_pid_records()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/tsosi/data/enrichment.py\", line 454, in update_entity_from_pid_records\n",
+      "    logger.info(\"Updating entity from PID records.\")\n",
+      "Message: 'Updating entity from PID records.'\n",
+      "Arguments: ()\n",
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 464, in format\n",
+      "    return self._format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 482, in _format\n",
+      "    return self._fmt.format(**values)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyError: 'server_time'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 1160, in emit\n",
+      "    msg = self.format(record)\n",
+      "          ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 999, in format\n",
+      "    return fmt.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 706, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 675, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 466, in format\n",
+      "    raise ValueError('Formatting field not found in record: %s' % e)\n",
+      "ValueError: Formatting field not found in record: 'server_time'\n",
+      "Call stack:\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1030, in _bootstrap\n",
+      "    self._bootstrap_inner()\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1073, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 761, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1010, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 92, in _worker\n",
+      "    work_item.run()\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 58, in run\n",
+      "    result = self.fn(*self.args, **self.kwargs)\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/asgiref/sync.py\", line 522, in thread_handler\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/tmp/ipykernel_72424/1178278949.py\", line 37, in to_run\n",
+      "    update_entity_from_pid_records()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/tsosi/data/enrichment.py\", line 489, in update_entity_from_pid_records\n",
+      "    logger.info(f\"Updated {len(entities_to_update)} Entity record from PID data.\")\n",
+      "Message: 'Updated 0 Entity record from PID data.'\n",
+      "Arguments: ()\n",
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 464, in format\n",
+      "    return self._format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 482, in _format\n",
+      "    return self._fmt.format(**values)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyError: 'server_time'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 1160, in emit\n",
+      "    msg = self.format(record)\n",
+      "          ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 999, in format\n",
+      "    return fmt.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 706, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 675, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/logging/__init__.py\", line 466, in format\n",
+      "    raise ValueError('Formatting field not found in record: %s' % e)\n",
+      "ValueError: Formatting field not found in record: 'server_time'\n",
+      "Call stack:\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1030, in _bootstrap\n",
+      "    self._bootstrap_inner()\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1073, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 761, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 1010, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 92, in _worker\n",
+      "    work_item.run()\n",
+      "  File \"/usr/lib/python3.12/concurrent/futures/thread.py\", line 58, in run\n",
+      "    result = self.fn(*self.args, **self.kwargs)\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/asgiref/sync.py\", line 522, in thread_handler\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/tmp/ipykernel_72424/1178278949.py\", line 37, in to_run\n",
+      "    update_entity_from_pid_records()\n",
+      "  File \"/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/tsosi/data/enrichment.py\", line 489, in update_entity_from_pid_records\n",
+      "    logger.info(f\"Updated {len(entities_to_update)} Entity record from PID data.\")\n",
+      "Message: 'Updated 0 Entity record from PID data.'\n",
+      "Arguments: ()\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -285,11 +488,11 @@
     "    # IdentifierVersion.objects.all().delete()\n",
     "    # Entity.objects.all().update(logo=None, date_logo_fetched=None)\n",
     "    update_entity_from_pid_records()\n",
-    "    new_identifiers_from_records()\n",
-    "    update_wikipedia_extract()\n",
-    "    update_logos()\n",
-    "    update_transfert_date_clc()\n",
-    "    update_entity_roles_clc()\n",
+    "    # new_identifiers_from_records()\n",
+    "    # update_wikipedia_extract()\n",
+    "    # update_logos()\n",
+    "    # update_transfert_date_clc()\n",
+    "    # update_entity_roles_clc()\n",
     "\n",
     "\n",
     "res = await to_run()"
