--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -168,6 +168,102 @@
     "\n",
     "{c.name: c for c in pycountry.countries}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Redis setup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO token_bucket - Consumed 0 tokens from bucket wikidata.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from asgiref.sync import sync_to_async\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "# from tsosi.data.token_bucket import ror_token_bucket as bucket\n",
+    "from tsosi.data.token_bucket import WIKIDATA_TOKEN_BUCKET as bucket\n",
+    "from tsosi.data.token_bucket import TOKEN_LUA_SCRIPT, TOKEN_SCRIPT_SHA_KEY\n",
+    "\n",
+    "\n",
+    "async def to_run():\n",
+    "    bucket.refill()\n",
+    "    # await bucket.redis.decrby(bucket.token_count_key, 10)\n",
+    "    # return await bucket.redis.get(bucket.token_count_key)\n",
+    "    # return await bucket.redis.get(bucket.last_refill_time_key)\n",
+    "    # return await bucket.consume(170)\n",
+    "\n",
+    "    # script_sha = await bucket._get_script_sha()\n",
+    "    tokens = bucket.consume(10000)\n",
+    "\n",
+    "    # script_sha = await bucket.redis.script_load(TOKEN_LUA_SCRIPT)\n",
+    "    # await bucket.redis.set(TOKEN_SCRIPT_SHA_KEY, script_sha)\n",
+    "    # n_script_sha = await bucket.redis.get(TOKEN_SCRIPT_SHA_KEY)\n",
+    "    # print(script_sha)\n",
+    "    # tokens = await bucket.redis.evalsha(\n",
+    "    #     n_script_sha.decode(\"utf-8\"),\n",
+    "    #     1,\n",
+    "    #     bucket.token_count_key,\n",
+    "    #     170,\n",
+    "    # )\n",
+    "    # return tokens\n",
+    "\n",
+    "    # s_sha = await bucket.redis.get(TOKEN_SCRIPT_SHA_KEY)\n",
+    "    # tokens = await bucket.redis.evalsha(s_sha, 1, bucket.token_count_key, 1)\n",
+    "    return tokens\n",
+    "\n",
+    "\n",
+    "res = await to_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "res\n",
+    "# n_res = float(res.decode(\"utf-8\"))\n",
+    "# print(time.time() - n_res)"
+   ]
   }
  ],
  "metadata": {
