Update token bucket class to actually do rate limiting - Implement locking mechanism to prevent duplicate task of a type

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO token_bucket - Consumed 0 tokens from bucket wikidata.\n"
+      "INFO token_bucket - Consumed 0 tokens from bucket wikipedia.\n"
      ]
     }
    ],
@@ -207,34 +207,15 @@
     "django.setup()\n",
     "\n",
     "# from tsosi.data.token_bucket import ror_token_bucket as bucket\n",
-    "from tsosi.data.token_bucket import WIKIDATA_TOKEN_BUCKET as bucket\n",
-    "from tsosi.data.token_bucket import TOKEN_LUA_SCRIPT, TOKEN_SCRIPT_SHA_KEY\n",
+    "from tsosi.data.token_bucket import (\n",
+    "    WIKIPEDIA_TOKEN_BUCKET as bucket,\n",
+    "    REDIS_CLIENT,\n",
+    ")\n",
     "\n",
     "\n",
     "async def to_run():\n",
-    "    bucket.refill()\n",
-    "    # await bucket.redis.decrby(bucket.token_count_key, 10)\n",
-    "    # return await bucket.redis.get(bucket.token_count_key)\n",
-    "    # return await bucket.redis.get(bucket.last_refill_time_key)\n",
-    "    # return await bucket.consume(170)\n",
+    "    tokens = bucket.consume(80)\n",
     "\n",
-    "    # script_sha = await bucket._get_script_sha()\n",
-    "    tokens = bucket.consume(10000)\n",
-    "\n",
-    "    # script_sha = await bucket.redis.script_load(TOKEN_LUA_SCRIPT)\n",
-    "    # await bucket.redis.set(TOKEN_SCRIPT_SHA_KEY, script_sha)\n",
-    "    # n_script_sha = await bucket.redis.get(TOKEN_SCRIPT_SHA_KEY)\n",
-    "    # print(script_sha)\n",
-    "    # tokens = await bucket.redis.evalsha(\n",
-    "    #     n_script_sha.decode(\"utf-8\"),\n",
-    "    #     1,\n",
-    "    #     bucket.token_count_key,\n",
-    "    #     170,\n",
-    "    # )\n",
-    "    # return tokens\n",
-    "\n",
-    "    # s_sha = await bucket.redis.get(TOKEN_SCRIPT_SHA_KEY)\n",
-    "    # tokens = await bucket.redis.evalsha(s_sha, 1, bucket.token_count_key, 1)\n",
     "    return tokens\n",
     "\n",
     "\n",
@@ -243,24 +224,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "b'190'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import time\n",
+    "from tsosi.data.token_bucket import (\n",
+    "    WIKIPEDIA_TOKEN_BUCKET as bucket,\n",
+    "    REDIS_CLIENT,\n",
+    ")\n",
     "\n",
-    "res\n",
+    "# bucket.refill()\n",
+    "REDIS_CLIENT.get(bucket.token_count_key)\n",
     "# n_res = float(res.decode(\"utf-8\"))\n",
     "# print(time.time() - n_res)"
    ]
