Implement signals to trigger celery tasks - Add service files for celery and celery_beat

--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -29,10 +29,8 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.models import Identifier, Entity, Transfert\n",
     "from tsosi.data.data_preparation import prepare_data, get_input_config\n",
     "from tsosi.data.ingestion import ingest_new_records\n",
-    "from tsosi.data.enrichment import update_transfert_date_clc\n",
     "from tsosi.models import empty_db\n",
     "\n",
     "EMPTY_DB = True\n",
@@ -43,64 +41,35 @@
     "    # Fill DB\n",
     "    if EMPTY_DB:\n",
     "        empty_db()\n",
-    "    # Transfert.objects.all().delete()\n",
-    "    # Identifier.objects.all().delete()\n",
-    "    # Entity.objects.all().delete()\n",
     "\n",
-    "    scipost_config = get_input_config(\n",
-    "        \"scipost\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/scipost/2024-10-21-scipost_enriched_data.json\",\n",
+    "    doaj_publisher_2021 = get_input_config(\n",
+    "        \"doaj_publisher_2021\",\n",
+    "        \"2025-01-07-DOAJ_Publisher_Report_2021_prepared.xlsx\",\n",
+    "        sheet_name=\"Sheet1\",\n",
     "    )\n",
-    "    pci_config = get_input_config(\n",
-    "        \"pci\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/pci/2024-03--pci-data.xlsx\",\n",
-    "        sheet_name=\"Feuil1\",\n",
-    "    )\n",
-    "    operas_config = get_input_config(\n",
-    "        \"operas\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/operas/OPERAS_2023_curated.xlsx\",\n",
-    "        sheet_name=\"Feuille 1\",\n",
-    "    )\n",
-    "    doaj_2024 = get_input_config(\n",
-    "        \"doaj_2024\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/raw/2024-09-06--TSOI_2024_Libraries__Report.xlsx\",\n",
-    "        sheet_name=\"2024 Libraries \",\n",
-    "    )\n",
-    "    doaj_2023 = get_input_config(\n",
-    "        \"doaj_2023\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/raw/2024-09-20-TSOI Income 2021-2023.xlsx\",\n",
-    "        sheet_name=\"Libraries of 2023\",\n",
-    "    )\n",
-    "    doaj_2022 = get_input_config(\n",
-    "        \"doaj_2022\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/raw/2024-09-20-TSOI Income 2021-2023.xlsx\",\n",
-    "        sheet_name=\"2022\",\n",
-    "    )\n",
-    "    doaj_2021 = get_input_config(\n",
-    "        \"doaj_2021\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/raw/2024-09-20-TSOI Income 2021-2023.xlsx\",\n",
-    "        sheet_name=\"2021\",\n",
+    "    doaj_publisher_2022 = get_input_config(\n",
+    "        \"doaj_publisher_2022\",\n",
+    "        \"2025-01-07-DOAJ_Publisher_Report_2022_prepared.xlsx\",\n",
+    "        sheet_name=\"Sheet1\",\n",
     "    )\n",
     "    doaj_publisher_2023 = get_input_config(\n",
     "        \"doaj_publisher_2023\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/prepared/TSOI_publisher_support_2023_prepared.xlsx\",\n",
+    "        \"2025-01-07-DOAJ_Publisher_Report_2023_prepared.xlsx\",\n",
     "        sheet_name=\"Sheet1\",\n",
     "    )\n",
     "    doaj_publisher_2024 = get_input_config(\n",
     "        \"doaj_publisher_2024\",\n",
-    "        \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/prepared/TSOI_publisher_support_2024_prepared.xlsx\",\n",
+    "        \"2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\",\n",
     "        sheet_name=\"Sheet1\",\n",
     "    )\n",
     "    configs = [\n",
-    "        scipost_config,\n",
-    "        pci_config,\n",
-    "        operas_config,\n",
-    "        doaj_2024,\n",
-    "        doaj_2023,\n",
-    "        doaj_2022,\n",
-    "        doaj_2021,\n",
+    "        doaj_publisher_2021,\n",
+    "        doaj_publisher_2022,\n",
+    "        doaj_publisher_2023,\n",
+    "        doaj_publisher_2024,\n",
     "    ]\n",
-    "    configs = [doaj_publisher_2023, doaj_publisher_2024]\n",
+    "    configs = [doaj_publisher_2021, doaj_publisher_2022]\n",
+    "    configs = [doaj_publisher_2021]\n",
     "    for config in configs:\n",
     "        prepare_data(config)\n",
     "        ingest_new_records(config.processed_data)\n",
@@ -109,6 +78,15 @@
     "\n",
     "\n",
     "res = await to_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
    ]
   },
   {
@@ -284,8 +262,8 @@
     "def to_run():\n",
     "    # IdentifierVersion.objects.all().delete()\n",
     "    # Entity.objects.all().update(logo=None, date_logo_fetched=None)\n",
-    "    update_entity_from_pid_records()\n",
-    "    # new_identifiers_from_records()\n",
+    "    # update_entity_from_pid_records()\n",
+    "    new_identifiers_from_records()\n",
     "    # update_wikipedia_extract()\n",
     "    # update_logos()\n",
     "    # update_transfert_date_clc()\n",
