Update ror matching to flag perfect match when the country is available

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -52,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO pid_matching - Preparing manual matching for 50 entities.\n",
+      "INFO pid_matching - Successfully prepared manual matching for 50 entities.\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -76,17 +85,20 @@
     "from tsosi.data.pid_matching import prepare_manual_matching\n",
     "\n",
     "\n",
-    "file_name = \"2024-09-20-DOAJ_Library_Report_2021-2023_raw.xlsx\"\n",
+    "file_name = \"2025-01-15-DOAJ_Library_Report_2024_raw.xlsx\"\n",
     "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/1_raw/\"\n",
-    "sheet = \"2021\"\n",
-    "name_column = \"Institution name\"\n",
+    "sheet = \"2024 Libraries \"\n",
+    "name_column = \"Company\"\n",
+    "country_colum = \"Country\"\n",
     "\n",
     "\n",
     "@sync_to_async\n",
     "def to_run():\n",
     "    xls = pd.ExcelFile(f\"{file_folder}{file_name}\")\n",
     "    data = pd.read_excel(xls, sheet)\n",
-    "    return prepare_manual_matching(data, name_column)\n",
+    "    return prepare_manual_matching(\n",
+    "        data, name_column, country_column=country_colum\n",
+    "    )\n",
     "\n",
     "\n",
     "res = await to_run()"
@@ -103,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/2_matched/\"\n",
-    "file_to_write = \"2024-09-20-DOAJ_Library_Report_2021_matched.xlsx\"\n",
+    "file_to_write = \"2025-01-15-DOAJ_Library_Report_2024_matched.xlsx\"\n",
     "file_path = f\"{file_folder}{file_to_write}\"\n",
     "res.to_excel(file_path, index=False)"
    ]
@@ -178,17 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO token_bucket - Consumed 0 tokens from bucket wikipedia.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -224,20 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'190'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from tsosi.data.token_bucket import (\n",
