--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO raw_data_config - Preparing data with config `doaj_publisher`.\n",
+      "INFO raw_data_config - Successfully prepared the data for config doaj_publisher\n",
+      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/_exports/2025-02-04_doaj_publisher_2024_full.json\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -24,24 +34,21 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from django.db.models import F\n",
-    "from tsosi.models import Transfert, Entity\n",
-    "from tsosi.data.entity_matching import matchable_entities, match_entities\n",
-    "from tsosi.models.transfert import (\n",
-    "    MATCH_CRITERIA_SAME_NAME_COUNTRY,\n",
-    "    MATCH_CRITERIA_SAME_NAME_ONLY,\n",
-    "    MATCH_CRITERIA_SAME_PID,\n",
-    "    MATCH_CRITERIA_SAME_NAME_URL,\n",
-    ")\n",
+    "from tsosi.data.preparation.doaj.publishers_202X import get_config\n",
     "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    return matchable_entities()\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
+    "year = 2024\n",
+    "file_path = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
+    "sheet_name = \"Sheet1\"\n",
+    "config = get_config(year, file_path, sheet_name)\n",
+    "config.generate_data_file()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -52,18 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO pid_matching - Preparing manual matching for 50 entities.\n",
-      "INFO pid_matching - Successfully prepared manual matching for 50 entities.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -85,10 +83,10 @@
     "from tsosi.data.pid_matching import prepare_manual_matching\n",
     "\n",
     "\n",
-    "file_name = \"2025-01-15-DOAJ_Library_Report_2024_raw.xlsx\"\n",
-    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/1_raw/\"\n",
-    "sheet = \"2024 Libraries \"\n",
-    "name_column = \"Company\"\n",
+    "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
+    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/1_raw/\"\n",
+    "sheet = \"Sheet1\"\n",
+    "name_column = \"Institution\"\n",
     "country_colum = \"Country\"\n",
     "\n",
     "\n",
@@ -115,14 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/2_matched/\"\n",
-    "file_to_write = \"2025-01-15-DOAJ_Library_Report_2024_matched.xlsx\"\n",
+    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/2_matched/\"\n",
+    "file_to_write = \"2023-11-27-DOAB_Library_Report_2023_matched.xlsx\"\n",
     "file_path = f\"{file_folder}{file_to_write}\"\n",
     "res.to_excel(file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = res.copy()\n",
+    "d[d[\"_processed\"] != True]"
    ]
   },
   {
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +166,7 @@
     "from tsosi.data.pid_matching import process_enriched_data\n",
     "from tsosi.models.transfert import TRANSFERT_ENTITY_TYPE_EMITTER\n",
     "\n",
-    "file = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/3_enriched/TSOI_publisher_support_2024_enriched_done.xlsx\"\n",
+    "file = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/3_enriched/2025-01-07-DOAJ_Publisher_Report_2024_enriched_done.xlsx\"\n",
     "sheet = \"Sheet1\"\n",
     "name_column = \"Company\"\n",
     "xls = pd.ExcelFile(file)\n",
@@ -166,8 +174,17 @@
     "\n",
     "res = process_enriched_data(data, name_column, TRANSFERT_ENTITY_TYPE_EMITTER)\n",
     "\n",
-    "file_to_write = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/TSOI_publisher_support_2024_prepared.xlsx\"\n",
+    "file_to_write = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
     "res.to_excel(file_to_write, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
    ]
   },
   {
@@ -232,16 +249,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "from tsosi.data.token_bucket import (\n",
-    "    WIKIPEDIA_TOKEN_BUCKET as bucket,\n",
-    "    REDIS_CLIENT,\n",
-    ")\n",
+    "from pycountry import countries\n",
     "\n",
-    "# bucket.refill()\n",
-    "REDIS_CLIENT.get(bucket.token_count_key)\n",
-    "# n_res = float(res.decode(\"utf-8\"))\n",
-    "# print(time.time() - n_res)"
+    "\n",
+    "res = countries.search_fuzzy(\"Guadeloupe\")\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emptying database...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from asgiref.sync import sync_to_async\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from tsosi.data.ingestion import ingest\n",
+    "from tsosi.models import empty_db\n",
+    "\n",
+    "publisher_files = [\n",
+    "    \"2025-02-04_doaj_publisher_2021_full.json\",\n",
+    "    \"2025-02-04_doaj_publisher_2022_full.json\",\n",
+    "    \"2025-02-04_doaj_publisher_2023_full.json\",\n",
+    "    \"2025-02-04_doaj_publisher_2024_full.json\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "@sync_to_async\n",
+    "def to_run():\n",
+    "    # empty_db()\n",
+    "    for file in publisher_files:\n",
+    "        ingest(file)\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "res = await to_run()"
    ]
   }
  ],
