Add management commands to trigger data ingestion

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -258,14 +258,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Emptying database...\n"
+      "INFO ingestion - Ingesting 42 transfert records.\n",
+      "INFO ingestion - Created 42 Entity records\n",
+      "INFO ingestion - Created 39 Identifier and IdentifierEntityMatching records.\n",
+      "INFO ingestion - Created 42 Transfert records\n",
+      "INFO ingestion - Created 84 TransfertEntityMatching records\n",
+      "INFO ingestion - Successfully ingested 42 records.\n",
+      "INFO tasks - Triggering post-ingestion pipeline.\n",
+      "INFO tasks - Triggering new identifier fetching for registries: ['ror', 'wikidata']\n",
+      "INFO ingestion - Ingesting 43 transfert records.\n",
+      "INFO ingestion - Created 4 Entity records\n",
+      "INFO ingestion - Created 1 Identifier and IdentifierEntityMatching records.\n",
+      "INFO ingestion - Created 43 Transfert records\n",
+      "INFO ingestion - Created 86 TransfertEntityMatching records\n",
+      "INFO ingestion - Successfully ingested 43 records.\n",
+      "INFO tasks - Triggering post-ingestion pipeline.\n",
+      "INFO tasks - Triggering new identifier fetching for registries: ['wikidata']\n",
+      "INFO ingestion - Ingesting 51 transfert records.\n",
+      "INFO ingestion - Created 12 Entity records\n",
+      "INFO ingestion - Created 10 Identifier and IdentifierEntityMatching records.\n",
+      "INFO ingestion - Created 51 Transfert records\n",
+      "INFO ingestion - Created 102 TransfertEntityMatching records\n",
+      "INFO ingestion - Successfully ingested 51 records.\n",
+      "INFO tasks - Triggering post-ingestion pipeline.\n",
+      "INFO tasks - Triggering new identifier fetching for registries: ['ror', 'wikidata']\n",
+      "INFO ingestion - Ingesting 44 transfert records.\n",
+      "INFO ingestion - Created 5 Entity records\n",
+      "INFO ingestion - Created 4 Identifier and IdentifierEntityMatching records.\n",
+      "INFO ingestion - Created 44 Transfert records\n",
+      "INFO ingestion - Created 88 TransfertEntityMatching records\n",
+      "INFO ingestion - Successfully ingested 44 records.\n",
+      "INFO tasks - Triggering post-ingestion pipeline.\n",
+      "INFO tasks - Triggering new identifier fetching for registries: ['ror']\n"
      ]
     }
    ],
@@ -286,7 +317,7 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.ingestion import ingest\n",
+    "from tsosi.data.ingestion import ingest_data_file\n",
     "from tsosi.models import empty_db\n",
     "\n",
     "publisher_files = [\n",
@@ -300,9 +331,9 @@
     "@sync_to_async\n",
     "def to_run():\n",
     "    # empty_db()\n",
-    "    for file in publisher_files:\n",
-    "        ingest(file)\n",
-    "    return\n",
+    "    # for file in publisher_files:\n",
+    "    #     ingest(file)\n",
+    "    # return\n",
     "\n",
     "\n",
     "res = await to_run()"
