Finalize data preparation for DOAJ 2021-2024

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO raw_data_config - Preparing data with config `doaj_publisher`.\n",
-      "INFO raw_data_config - Successfully prepared the data for config doaj_publisher\n",
-      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/_exports/2025-02-04_doaj_publisher_2024_full.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
     "import os\n",
     "import django\n",
-    "from datetime import date\n",
-    "import pandas as pd\n",
-    "from asgiref.sync import sync_to_async\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
     "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
@@ -34,21 +21,26 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.preparation.doaj.publishers_202X import get_config\n",
+    "from tsosi.data.preparation.doaj.publishers_202X import (\n",
+    "    get_config as doaj_publisher_config,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.libraries_2024_now import (\n",
+    "    get_config as doaj_library_2024_config,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.libraries_2023 import (\n",
+    "    get_config as doaj_library_2023_config,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.libraries_2021_2022 import (\n",
+    "    get_config as doaj_library_2021_2022_config,\n",
+    ")\n",
     "\n",
     "year = 2024\n",
     "file_path = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
     "sheet_name = \"Sheet1\"\n",
-    "config = get_config(year, file_path, sheet_name)\n",
+    "config = doaj_publisher_config(year, file_path, sheet_name)\n",
+    "# config = doaj_library_2023_config(file_path, sheet_name)\n",
     "config.generate_data_file()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -137,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prepare enriched data\n"
+    "### Process enriched data\n"
    ]
   },
   {
@@ -163,19 +155,46 @@
     "\n",
     "django.setup()\n",
     "\n",
+    "from tsosi.data.utils import clean_null_values\n",
+    "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
     "from tsosi.data.pid_matching import process_enriched_data\n",
-    "from tsosi.models.transfert import TRANSFERT_ENTITY_TYPE_EMITTER\n",
+    "from tsosi.models.transfert import (\n",
+    "    TRANSFERT_ENTITY_TYPE_EMITTER,\n",
+    "    TRANSFERT_ENTITY_TYPE_AGENT,\n",
+    ")\n",
     "\n",
-    "file = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/3_enriched/2025-01-07-DOAJ_Publisher_Report_2024_enriched_done.xlsx\"\n",
-    "sheet = \"Sheet1\"\n",
-    "name_column = \"Company\"\n",
-    "xls = pd.ExcelFile(file)\n",
-    "data = pd.read_excel(xls, sheet)\n",
+    "process_agents = True\n",
+    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj\"\n",
+    "file_base_name = \"2024-09-20-DOAJ_Library_Report_2023\"\n",
+    "enriched_file_path = f\"{folder}/3_enriched/{file_base_name}_enriched_done.xlsx\"\n",
+    "sheet_transferts = \"Transferts\"\n",
+    "name_column = \"Institution name\"\n",
+    "xls = pd.ExcelFile(enriched_file_path)\n",
+    "\n",
+    "data = pd.read_excel(xls, sheet_transferts)\n",
     "\n",
     "res = process_enriched_data(data, name_column, TRANSFERT_ENTITY_TYPE_EMITTER)\n",
     "\n",
-    "file_to_write = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
-    "res.to_excel(file_to_write, index=False)"
+    "if process_agents:\n",
+    "    # Match agents data back to the transferts spreadsheet\n",
+    "    print(\"Processing agents/consortiums data\")\n",
+    "    sheet_agent = \"Consortiums\"\n",
+    "    agent_col = \"agent/consortium\"\n",
+    "    country_col = \"country\"\n",
+    "    agents = pd.read_excel(xls, sheet_agent)\n",
+    "    for col in [agent_col, country_col]:\n",
+    "        res[col] = res[col].apply(clean_cell_value)\n",
+    "        agents[col] = agents[col].apply(clean_cell_value)\n",
+    "    clean_null_values(agents)\n",
+    "    clean_null_values(res)\n",
+    "    res = res.merge(agents, on=[agent_col, country_col], how=\"left\")\n",
+    "    # Remove agents not in the agent spreadsheet (DOAJ mixed up consortium name and institution type)\n",
+    "    wrong_agents = res[~res[agent_col].isin(agents[agent_col])]\n",
+    "    res.loc[wrong_agents.index, agent_col] = None\n",
+    "\n",
+    "    # Process agents data enrichment\n",
+    "    res = process_enriched_data(res, agent_col, TRANSFERT_ENTITY_TYPE_AGENT)\n",
+    "clean_null_values(res)"
    ]
   },
   {
@@ -184,7 +203,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
+    "res[res[\"Agent\"] == \"Baden-Wurttemberg\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepared_file_path = f\"{folder}/4_prepared/{file_base_name}_prepared.xlsx\"\n",
+    "\n",
+    "res.to_excel(prepared_file_path, sheet_name=\"Transferts\", index=False)"
    ]
   },
   {
@@ -258,48 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO ingestion - Ingesting 42 transfert records.\n",
-      "INFO ingestion - Created 42 Entity records\n",
-      "INFO ingestion - Created 39 Identifier and IdentifierEntityMatching records.\n",
-      "INFO ingestion - Created 42 Transfert records\n",
-      "INFO ingestion - Created 84 TransfertEntityMatching records\n",
-      "INFO ingestion - Successfully ingested 42 records.\n",
-      "INFO tasks - Triggering post-ingestion pipeline.\n",
-      "INFO tasks - Triggering new identifier fetching for registries: ['ror', 'wikidata']\n",
-      "INFO ingestion - Ingesting 43 transfert records.\n",
-      "INFO ingestion - Created 4 Entity records\n",
-      "INFO ingestion - Created 1 Identifier and IdentifierEntityMatching records.\n",
-      "INFO ingestion - Created 43 Transfert records\n",
-      "INFO ingestion - Created 86 TransfertEntityMatching records\n",
-      "INFO ingestion - Successfully ingested 43 records.\n",
-      "INFO tasks - Triggering post-ingestion pipeline.\n",
-      "INFO tasks - Triggering new identifier fetching for registries: ['wikidata']\n",
-      "INFO ingestion - Ingesting 51 transfert records.\n",
-      "INFO ingestion - Created 12 Entity records\n",
-      "INFO ingestion - Created 10 Identifier and IdentifierEntityMatching records.\n",
-      "INFO ingestion - Created 51 Transfert records\n",
-      "INFO ingestion - Created 102 TransfertEntityMatching records\n",
-      "INFO ingestion - Successfully ingested 51 records.\n",
-      "INFO tasks - Triggering post-ingestion pipeline.\n",
-      "INFO tasks - Triggering new identifier fetching for registries: ['ror', 'wikidata']\n",
-      "INFO ingestion - Ingesting 44 transfert records.\n",
-      "INFO ingestion - Created 5 Entity records\n",
-      "INFO ingestion - Created 4 Identifier and IdentifierEntityMatching records.\n",
-      "INFO ingestion - Created 44 Transfert records\n",
-      "INFO ingestion - Created 88 TransfertEntityMatching records\n",
-      "INFO ingestion - Successfully ingested 44 records.\n",
-      "INFO tasks - Triggering post-ingestion pipeline.\n",
-      "INFO tasks - Triggering new identifier fetching for registries: ['ror']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -330,13 +321,72 @@
     "\n",
     "@sync_to_async\n",
     "def to_run():\n",
-    "    # empty_db()\n",
+    "    empty_db()\n",
     "    # for file in publisher_files:\n",
     "    #     ingest(file)\n",
     "    # return\n",
     "\n",
     "\n",
     "res = await to_run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract agents/consortiums\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import numpy as np\n",
+    "\n",
+    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/3_enriched\"\n",
+    "file_name = \"2025-01-15-DOAJ_Library_Report_2024_enriched_done.xlsx\"\n",
+    "file_name = \"2024-09-20-DOAJ_Library_Report_2023_enriched_done.xlsx\"\n",
+    "sheet_name = \"Sheet1\"\n",
+    "\n",
+    "xls = pd.ExcelFile(f\"{folder}/{file_name}\")\n",
+    "df = pd.read_excel(xls, sheet_name)\n",
+    "\n",
+    "\n",
+    "def is_true(val) -> bool:\n",
+    "    if isinstance(val, str):\n",
+    "        return val.strip().lower() == \"true\"\n",
+    "    elif isinstance(val, bool):\n",
+    "        return val\n",
+    "    elif isinstance(val, (int, float)):\n",
+    "        return val == 1\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def clean_cell_value[T](s: T) -> T:\n",
+    "    \"\"\"\n",
+    "    Clean the value from a spreadsheet cell:\n",
+    "    - Normalize spacing values.\n",
+    "    - Strip whitespaces.\n",
+    "    \"\"\"\n",
+    "    if not s or not isinstance(s, str):\n",
+    "        return s\n",
+    "    return re.sub(r\"\\s+\", \" \", s).strip()\n",
+    "\n",
+    "\n",
+    "agent_column = \"agent/consortium\"\n",
+    "country_column = \"country\"\n",
+    "not_agents = [\"standalone library\", \"Funder\", \"Consortium\", \"publisher\"]\n",
+    "df = df[~df[agent_column].isna()]\n",
+    "df = df[~df[agent_column].isin(not_agents)]\n",
+    "df = df[[agent_column, country_column]].drop_duplicates()\n",
+    "for c in df.columns:\n",
+    "    df[c] = df[c].apply(clean_cell_value)\n",
+    "df.replace(to_replace=[np.nan, pd.NA, pd.NaT], value=None, inplace=True)\n",
+    "df"
    ]
   }
  ],
